8213411: JDK-8209189 incorrect for Big Endian (JVM crashes)

Reviewed-by: kvn, mdoerr